Implement UC-08 metadata
